# temperature_joints_markers

./: CMakeLists.txt  README.md  package.xml
config/: talos.yaml
development_files/: diagnostics_2017-11-15-13-39-04.bag  talos_robot_desc.txt  talos_robot_description.txt
launch/: motor_markers_talos.launch
scripts/: get_mesh_urdf.py  temperature_to_markers.py
